added font awesome + centered student names on cards

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
     />
     <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon.ico" />
     <meta name="theme-color" content="#712cf9" />
+
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/2e15c7c035.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -86,12 +92,12 @@
               class="me-2"
               viewBox="0 0 24 24"
             >
-              <path
+              <!-- <path
                 d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"
-              />
-              <circle cx="12" cy="13" r="4" />
+              /> -->
+              <!-- <circle cx="12" cy="13" r="4" /> -->
             </svg>
-            <strong>Album</strong>
+            <strong>BAMS Comp Sci</strong>
           </a>
           <button
             class="navbar-toggler"
@@ -110,7 +116,7 @@
 
     <main>
       <section class="py-5 text-center container">
-        <div class="row py-lg-5">
+        <div class="row py-lg-1">
           <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">Holiday Cards 2022</h1>
             <p class="lead text-muted">
@@ -118,15 +124,18 @@
               their own holiday cards. The students were very creative and
               worked very hard. This page shows their work.
             </p>
-            <p class="text-muted">Note: Each card needs time to load because there are a lot of graphics.</p>
+            <p class="text-muted">
+              Note: Each card needs time to load because there are a lot of
+              graphics.
+            </p>
           </div>
         </div>
       </section>
-     
+
       <!-- Row 1 -->
       <div class="album py-5 bg-light">
         <div class="container">
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3">
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
                 <iframe
@@ -137,7 +146,7 @@
                 >
                 </iframe>
                 <div class="card-body">
-                  <p class="card-text lead">Emma A.</p>
+                  <p class="card-text lead student-name">Emma A.</p>
                 </div>
               </div>
             </div>
@@ -152,7 +161,7 @@
                 >
                 </iframe>
                 <div class="card-body">
-                  <p class="card-text lead">Evens A.</p>
+                  <p class="card-text lead student-name">Evens A.</p>
                 </div>
               </div>
             </div>
@@ -167,7 +176,7 @@
                 >
                 </iframe>
                 <div class="card-body">
-                  <p class="card-text lead">Aiden A.</p>
+                  <p class="card-text lead student-name">Aiden A.</p>
                 </div>
               </div>
             </div>
@@ -178,7 +187,7 @@
       <!-- Row 2 -->
       <div class="album py-5 bg-light">
         <div class="container">
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3">
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
                 <iframe
@@ -189,7 +198,7 @@
                 >
                 </iframe>
                 <div class="card-body">
-                  <p class="card-text lead">Oluwaseun A.</p>
+                  <p class="card-text lead student-name">Oluwaseun A.</p>
                 </div>
               </div>
             </div>
@@ -204,7 +213,7 @@
                 >
                 </iframe>
                 <div class="card-body">
-                  <p class="card-text lead">Samuel A.</p>
+                  <p class="card-text lead student-name">Samuel A.</p>
                 </div>
               </div>
             </div>
@@ -219,14 +228,13 @@
                 >
                 </iframe>
                 <div class="card-body">
-                  <p class="card-text lead">Lance B.</p>
+                  <p class="card-text lead student-name">Lance B.</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      
     </main>
 
     <footer class="text-muted py-5">
@@ -234,14 +242,13 @@
         <p class="float-end mb-1">
           <a href="#">Back to top</a>
         </p>
-        <p class="mb-1">
-          Album example is &copy; Bootstrap, but please download and customize
-          it for yourself!
-        </p>
+        <p class="mb-1">BAMS Comp Sci, Inc. &copy; 2022-2023</p>
         <p class="mb-0">
-          New to Bootstrap? <a href="/">Visit the homepage</a> or read our
-          <a href="/docs/5.2/getting-started/introduction/"
-            >getting started guide</a
+          These projects were complete by students in Computer Science at
+          <a
+            href="https://www.ascendlearning.org/middle-schools/brooklyn-ascend-middle"
+            target="_blank"
+            >Brooklyn Ascend Middle School (BAMS)</a
           >.
         </p>
       </div>
