changed copy on nav bar

--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
               /> -->
               <!-- <circle cx="12" cy="13" r="4" /> -->
             </svg>
-            <strong>BAMS Comp Sci</strong>
+            <i class="fas fa-robot fa-lg p-3"></i>
+            <strong>BAMS Computer Science</strong>
           </a>
           <button
             class="navbar-toggler"
