added back to top icon

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <main>
       <section class="py-5 text-center container">
         <div class="row py-lg-1">
-          <div class="col-lg-6 col-md-8 mx-auto">
+          <div class="col-lg-6 col-md-8 mx-auto" id="top">
             <h1 class="fw-light">Holiday Cards 2022</h1>
             <p class="lead text-muted">
               The Wednesday/Thursday 5th grade Computer Science class created
@@ -241,7 +241,10 @@
     <footer class="text-muted py-5">
       <div class="container">
         <p class="float-end mb-1">
-          <a href="#">Back to top</a>
+          <a href="#top"
+            ><i class="fas fa-caret-up fa-2x px-2"></i>Back to top</a
+          >
+
         </p>
         <p class="mb-1">BAMS Comp Sci, Inc. &copy; 2022-2023</p>
         <p class="mb-0">
