--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
                   height="480"
                   frameborder="0"
                   src="https://edu.cospaces.io/MPU-TSG"
+                  loading="lazy"
                 >
                 </iframe>
                 <div class="card-body">
@@ -211,6 +212,7 @@
                   height="480"
                   frameborder="0"
                   src="https://edu.cospaces.io/VHV-ERG"
+                  loading="lazy"
                 >
                 </iframe>
                 <div class="card-body">
@@ -226,6 +228,7 @@
                   height="480"
                   frameborder="0"
                   src="https://edu.cospaces.io/PJH-CTC"
+                  loading="lazy"
                 >
                 </iframe>
                 <div class="card-body">
@@ -236,6 +239,145 @@
           </div>
         </div>
       </div>
+
+      <!-- Row 3 -->
+      <div class="album py-5 bg-light">
+        <div class="container">
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <div class="col">
+              <div class="card shadow-sm">
+                <iframe
+                  width="100%"
+                  height="480"
+                  frameborder="0"
+                  src="https://edu.cospaces.io/CUG-HKV"
+                  loading="lazy"
+                >
+                </iframe>
+                <div class="card-body">
+                  <p class="card-text lead student-name">Nahyla C.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-sm">
+                <iframe
+                  width="100%"
+                  height="480"
+                  frameborder="0"
+                  src="https://edu.cospaces.io/QUX-KEZ"
+                  loading="lazy"
+                >
+                </iframe>
+                <div class="card-body">
+                  <p class="card-text lead student-name">Ramiel D.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-sm">
+                <iframe
+                  width="100%"
+                  height="480"
+                  frameborder="0"
+                  src="https://edu.cospaces.io/AAT-WPN"
+                  loading="lazy"
+                >
+                </iframe>
+                <div class="card-body">
+                  <p class="card-text lead student-name">Triston F.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Row 4 -->
+      <div class="album py-5 bg-light">
+        <div class="container">
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <div class="col">
+              <div class="card shadow-sm">
+                <iframe
+                  width="100%"
+                  height="480"
+                  frameborder="0"
+                  src="https://edu.cospaces.io/FJB-VDW"
+                  loading="lazy"
+                >
+                </iframe>
+                <div class="card-body">
+                  <p class="card-text lead student-name">Kyanna G.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-sm">
+                <iframe
+                  width="100%"
+                  height="480"
+                  frameborder="0"
+                  src="https://edu.cospaces.io/MNC-AKB"
+                  loading="lazy"
+                >
+                </iframe>
+                <div class="card-body">
+                  <p class="card-text lead student-name">Demarco H.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-sm">
+                <iframe
+                  width="100%"
+                  height="480"
+                  frameborder="0"
+                  src="https://edu.cospaces.io/XZX-QPT"
+                  loading="lazy"
+                >
+                </iframe>
+                <div class="card-body">
+                  <p class="card-text lead student-name">Denver H.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <section class="py-5 album py-5 bg-light">
+        <div class="pagination-section-title text-center pb-3 lead">
+          Sorted by Last Name
+        </div>
+        <nav aria-label="Page navigation">
+          <ul class="pagination justify-content-center">
+            <li class="page-item lead">
+              <a class="page-link" href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            <li class="page-item lead">
+              <a class="page-link" href="#">A - I</a>
+            </li>
+            <li class="page-item lead">
+              <a class="page-link" href="#">J - S</a>
+            </li>
+            <li class="page-item lead">
+              <a class="page-link" href="#">T - Z</a>
+            </li>
+            <li class="page-item lead">
+              <a class="page-link" href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </section>
     </main>
 
     <footer class="text-muted py-5">
@@ -244,7 +386,6 @@
           <a href="#top"
             ><i class="fas fa-caret-up fa-2x px-2"></i>Back to top</a
           >
-
         </p>
         <p class="mb-1">BAMS Comp Sci, Inc. &copy; 2022-2023</p>
         <p class="mb-0">
